began working on javascript by adding question objects and functions to begin the game

--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
         <div class = 'title-screen'>
             <h1 class = 'game-title'>Coding Quiz</h1>
         </div>
-        <div class = 'question-container'></div>
-        <div class = 'answer-grid'>
-            <button class="btn">answer</button>
-            <button class="btn">answer</button>
-            <button class="btn">answer</button>
-            <button class="btn">answer</button>
+        <div id = 'question' class = 'question-container'>Click the button below!</div>
+        <div id = 'answer-grid' class = 'answer-grid hide'>
         </div>
         <button id = 'start-btn' class = 'start-btn btn'>Start</button>
     </div>
