--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class = 'container'>
-        <div class = 'timer'></div>
+        <div id = 'timer' class = 'timer'></div>
         <div class = 'title-screen'>
             <h1 class = 'game-title'>Coding Quiz</h1>
         </div>
