added score to show throughout the game and made some minor styling adjustments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div class = 'container'>
-        <div id = 'timer' class = 'timer'></div>
+        <div id = 'timer' class = 'upper-row'></div>
+        <div id = 'score-container' class = 'upper-row'></div>
         <div class = 'title-screen'>
             <h1 class = 'game-title'>Coding Quiz</h1>
         </div>
